--- a/app/public/index.html
+++ b/app/public/index.html
@@ -19,7 +19,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Kochi Metro Web App</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Aleo:700|Open+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
